--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Nascimento:</strong> <span><19 de Junho de 1995</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Nascimento:</strong> <span>19 de Junho de 1995</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://medium.com/@fossegui</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Número de telefone:</strong> <span>75 9 9924-8005</span></li>
                 </ul>
