--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -102,7 +102,7 @@
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/ML R.png" alt="">
+                  <img src="assets/img/portfolio/Captura de Tela (37).png" alt="">
                 </div>
 
                
