--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -118,7 +118,7 @@
               <ul>
                 <li><strong>Categoria</strong>: Machine Learning</li>
                 <li><strong>Data do projeto</strong>: 21 de Julho de 2023</li>
-                <li><strong>URL do projeto</strong>: <a href="#">https://medium.com/@guiga.pej/aprendizado-de-m%C3%A1quina-n%C3%A3o-supervisionado-machine-learning-para-detec%C3%A7%C3%A3o-de-fraudes-4a646f5fb931</a></li>
+                <li><strong>URL do projeto</strong>: <a href="#">https://medium.com/@fossegui/aprendizado-de-m%C3%A1quina-n%C3%A3o-supervisionado-machine-learning-para-detec%C3%A7%C3%A3o-de-fraudes-4a646f5fb931</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
