--- a/index.html
+++ b/index.html
@@ -112,14 +112,12 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Nascimento:</strong> <span>19 de Junho de 1995</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://medium.com/@fossegui</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Número de telefone:</strong> <span>75 9 9924-8005</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Idade:</strong> <span>28</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Grau:</strong> <span>Graduado</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>guiga_pej@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Disponível</span></li>
@@ -210,6 +208,13 @@
               <span class="skill">Metodologia Squad<i class="val">Intermediário</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+             <div class="progress">
+              <span class="skill">Javascript<i class="val">Iniciante</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
